sdf.util: GrammarDebugPrinter fixes for annotations

--- a/de.tud.stg.tigerseye.sdfdsl.languagetestbench/debug/ArithExpr.html
+++ b/de.tud.stg.tigerseye.sdfdsl.languagetestbench/debug/ArithExpr.html
@@ -9,6 +9,7 @@ li {font-family: Menlo, Consolas, monospace; font-size: 10pt;}
 .inline {background: #eee;}
 .inline .inline {background: #ddd;}
 .inline .inline .inline {background: #ccc;}
+.annotations {background: #FFE491;}
 </style>
 </head><body>
 <h1>ArithExpr&nbsp;Grammar</h1>
